# GraphRAG

./: .gitignore  EntityRelationshipExtractor.py  README.md  database-creation.ipynb  db_funcs.py  docker-compose.yml  embeddings.ipynb  get-data.sh  graphRAGQuerier.py  migrate.py  models.py  my_qdrant.py  neo4j_funcs.py  notebook.ipynb  ollama.py  pyproject.toml  query.py  utils.py
migrations/: 01_create_tables.sql
notebooks/: database-creation.ipynb  embeddings.ipynb  exploration.ipynb  ingest.ipynb  neo4j_insert_test.ipynb  notebook.ipynb  query.ipynb
